[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "steamloop"
version = "1.0.0"
description = "Local control for choochoo based thermostats"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "J. Nick Koston", email = "nick@koston.org" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "orjson>=3.10",
]

urls."Bug Tracker" = "https://github.com/hvaclibs/steamloop/issues"
urls.Changelog = "https://github.com/hvaclibs/steamloop/blob/main/CHANGELOG.md"
urls.documentation = "https://steamloop.readthedocs.io"
urls.repository = "https://github.com/hvaclibs/steamloop"

[project.scripts]
steamloop = "steamloop.cli:main"

[dependency-groups]
dev = [
  "pytest==9.*",
  "pytest-asyncio",
  "sybil[pytest]",
  "coverage",
  "pytest-cov==7.*",
]
docs = [
  "sphinx==9.*; python_version>='3.12'",
  "furo; python_version>='3.12'",
  "myst-parser; python_version>='3.12'",
  "sphinx-autobuild; python_version>='3.12'",
]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
  "ASYNC", # async rules
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except
  "C",     # complexity + comprehensions
  "COM818", # Trailing comma on bare tuple prohibited
  "D",     # flake8-docstrings
  "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
  "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
  "E",     # pycodestyle
  "F",     # pyflakes
  "FLY",   # flynt
  "FURB",  # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "ICN001", # import conventions; {name} should be imported as {asname}
  "INP",   # flake8-no-pep420
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "N804",  # First argument of a class method should be named cls
  "N805",  # First argument of a method should be named self
  "N815",  # Variable {name} in class scope should not be mixedCase
  "PERF",  # Perflint
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-pathlib
  "PYI",   # flake8-pyi
  "RET",   # flake8-return
  "RSE",   # flake8-raise
  "RUF",   # ruff specific
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLF",   # flake8-self
  "SLOT",  # flake8-slots
  "T100",  # Trace found: {name} used
  "T20",   # flake8-print
  "TC",    # flake8-type-checking
  "TID",   # Tidy imports
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # pycodestyle
]
lint.ignore = [
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "D213",    # Multi-line docstring summary should start at the second line
  "D100",    # Missing docstring in public module
  "D104",    # Missing docstring in public package
  "D107",    # Missing docstring in `__init__`
  "D401",    # First line of docstring should be in imperative mood
  "COM812",  # May conflict with the formatter
  "ISC001",  # May conflict with the formatter
  "TRY003",  # Avoid specifying long messages outside the exception class
  "TRY301",  # raise within try — used for exception wrapping
  "PLR0913", # Too many arguments to function call
  "PLR0911", # Too many return statements
  "SIM110",  # Reimplementing builtin — can be slower
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "INP001",
  "PLC0415",
  "PLR2004",
  "PT011",
  "PT012",
  "S101",
  "S105",
  "S106",
  "SLF001",
  "TC002",
  "TRY003",
]
lint.per-file-ignores."src/steamloop/cli.py" = [
  "C901",    # _handle_command is inherently a command dispatcher
  "PLR0912", # _handle_command has many branches by design
  "PLR0915", # _handle_command has many statements by design
  "PLR2004", # magic values in CLI arg counts are clear
  "T201",    # print() is the CLI output mechanism
]
lint.isort.known-first-party = [ "steamloop", "tests" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
  "-v",
  "-Wonce",
  "-p no:doctest",
  "--cov=steamloop",
  "--cov-report=term",
  "--cov-report=xml"
]
pythonpath = [ "src" ]
asyncio_mode = "auto"

[tool.coverage]
run.branch = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  'docs/.*',
  'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/steamloop/__init__.py:__version__",
  "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial [Cc]ommit.*''', # codespell:ignore
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
